@startuml
User <--x UserApplicationService: 値を利用する
UserService <--x UserApplicationService: 重複確認
User <.x UserService: 値として依存
User <.x UserRepository: 値として依存

UserRepository <--x UserApplicationService: データストアに保存

interface UserRepository {
  FindByID(id UserID) (*User, error)
  FindByName(name UserName) (*User, error)
  Save(user User) error
}

class UserService {
  - userRepository: UserRepository
  + Exists(user User) bool
}
class User {
  - userName: UserName
  - userID: UserID
}
class UserApplicationService {
  - userRepository: UserRepository
  - userService: UserService
  + Register(userName string) error
}
note left
値オブジェクトとドメインサービス、リポジトリを利用してユーザ登録を実現
endnote
@enduml
